--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/griffinsolimini/CapstoneIntro#readme",
   "dependencies": {
+    "alchemy-api": "^1.3.3",
+    "readline": "^1.3.0",
     "watson-developer-cloud": "^2.14.4"
   }
 }
